5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1601_2425.log
== SUBMITION (2019-03-24 23:39:13) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c
print(round(cs, 3)"km/l")
-- EXECUTION TIME:
0.15165
-- ERROR:
  File "/home/codebench/codes/1601/2425/main.py", line 4
    print(round(cs, 3)"km/l")
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:40:16) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c
print(round(cs, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cs, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:40:30) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c
print(round(cs, 3"km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(cs, 3"km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:43:49) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:43:54) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:43:56) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:44:02) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:44:39) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c
print(round(cs, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:44:58) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d/c
print(round(cs, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:45:10) 
-- CODE:
print("gab")
-- OUTPUT:
gab
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:45:36) 
-- CODE:
d = int(input("digite a Distância: "))
c = float(input("digite o combustível gasto: "))
cs= d // c
print(round(cs, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:49:05) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = d//c

print(round(cs, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:50:24) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = d//c

print(round(cs, 3"km/l"))
-- ERROR:
File "XXXX", line 6
    print(round(cs, 3"km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:50:35) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = d//c

print(round(cs, 3)"km/l")
-- ERROR:
File "XXXX", line 6
    print(round(cs, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:51:57) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d//c) "km/l"

print(round(cs, 3))
-- ERROR:
File "XXXX", line 4
    cs = (d//c) "km/l"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:52:29) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d//c) 

print(round(cs, 3)) print("km/l")
-- ERROR:
File "XXXX", line 6
    print(round(cs, 3)) print("km/l")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:52:39) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d//c) 

print(round(cs, 3)) 
print("km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:52:54) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs, 3)) 
print("km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 23:53:05) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs, 3)) 
print("km/l")
-- EXECUTION TIME:
0.142088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:53:34) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs "km/l", 3)) 

-- ERROR:
File "XXXX", line 6
    print(round(cs "km/l", 3)) 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:53:58) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round("cs km/l", 3)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:57:08) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs , 3)"km/l") 

-- ERROR:
File "XXXX", line 6
    print(round(cs , 3)"km/l") 
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:57:48) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs , 3))
print("km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 23:57:56) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs , 3))
print("km/l")


-- EXECUTION TIME:
0.148598
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:58:42) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs,km/l 3))



-- ERROR:
File "XXXX", line 6
    print(round(cs,km/l 3))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:59:00) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs, km/l, 3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:59:17) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs km/l, 3))



-- ERROR:
File "XXXX", line 6
    print(round(cs km/l, 3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 23:59:57) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs,km/l, 3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:01:51) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs, 3)km/l)



-- ERROR:
File "XXXX", line 6
    print(round(cs, 3)km/l)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:03:28) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs, 3)"km/l")



-- ERROR:
File "XXXX", line 6
    print(round(cs, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:08:16) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs, 3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:10:03) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 

print(round(cs, 3 "kml"))



-- ERROR:
File "XXXX", line 6
    print(round(cs, 3 "kml"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:10:45) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 
a = "km/l"

print(round(cs, 3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:10:56) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 
a = "km/l"

print(round(cs, 3)a)



-- ERROR:
File "XXXX", line 7
    print(round(cs, 3)a)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:11:04) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c) 
a = "km/l"

print(round(cs,a, 3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:04:51) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c)

print(round(cs, 3),"km/l")



-- EXECUTION TIME:
0.210435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:04:54) 
-- CODE:
d = int(input("digite a distancia"))
c = float(input("digite o combustivel"))

cs = (d/c)

print(round(cs, 3),"km/l")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:05:46) 
-- CODE:
d = int(input("digite a distancia: "))
c = float(input("digite o combustivel: "))

cs = (d/c)

print(round(cs, 3),"km/l")



-- EXECUTION TIME:
0.205658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:07:28) 
-- CODE:
d = int(input("digite a distancia: "))
c = float(input("digite o combustivel: "))

cs = round(d/c, 3)

print(cs, "km/l")



-- EXECUTION TIME:
0.173038
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:07:55) 
-- CODE:
d = float(input("digite a distancia: "))
c = float(input("digite o combustivel: "))

cs = round(d/c, 3)

print(cs, "km/l")



-- EXECUTION TIME:
0.149707
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
